2003-11-30  Wakaba  <wakaba@suika.fam.cx>

	* Base.pm (replace): Passes $self as -formatter and %opt as -option when throwing exception.
	(replace): Now match to /%$/.

2003-11-22  Wakaba  <wakaba@suika.fam.cx>

	* Node.pm, Text.pm (rule_def): Bug fix of treatement of boolean attributes.

2003-11-21  Wakaba  <wakaba@suika.fam.cx>

	* Node.pm (parse_attr): Turn -parse_flag minus after once parsed.

2003-11-16  Wakaba  <wakaba@suika.fam.cx>

	* Node.pm: New module.

2003-11-15  Wakaba  <wakaba@suika.fam.cx>

	* Text.pm: New module.

	* Base.pm (replace): Attribute name flag and attribute value flag support.

2003-11-13  Wakaba  <wakaba@suika.fam.cx>

	* Base.pm: New module.

	* ChangeLog: New file.
