@@ -19,11 +19,11 @@ This module is part of manakai.
 
 package Message::Util::Formatter::Node;
 use strict;
-our $VERSION = do{my @r=(q$Revision: 1.2 $=~/\d+/g);sprintf "%d."."%02d" x $#r,@r};
+our $VERSION = do{my @r=(q$Revision: 1.3 $=~/\d+/g);sprintf "%d."."%02d" x $#r,@r};
 require Message::Util::Formatter::Base;
 our @ISA = 'Message::Util::Formatter::Base';
 
-sub rule_def () {+{
+sub ___rule_def () {+{
     -attr_bare_text => {
       main => sub {
         my ($self, $name, $p, $o, %opt) = @_;
@@ -92,17 +92,6 @@ sub rule_def () {+{
     },
 }}
 
-sub new ($;%) {
-  my ($class, %opt) = @_;
-  my $rule = $opt{rule};
-  $opt{rule} = sub {
-    $_[0]->rule_def->{$_[1]}
-      or
-    __PACKAGE__->rule_def->{$_[1]}
-  };
-  $class->SUPER::new (%opt);
-}
-
 sub parse_attr ($$$$;%) {
   my ($self, $p, $name, $o, %opt) = @_;
   if ($p->{-parse_flag}->{$name} > 0) {
@@ -131,4 +120,4 @@ modify it under the same terms as Perl itself.
 
 =cut
 
-1; # $Date: 2003/12/01 07:50:29 $
+1; # $Date: 2003/12/06 05:09:39 $
