@@ -1,3 +1,13 @@
+2003-12-06  Wakaba  <wakaba@suika.fam.cx>
+
+	* Base.pm (replace): Use new syntax of Formatter.
+
+	* Text.pm (___rule_def): Renamed from rule_def.
+        (new): Removed.
+
+	* Node.pm (___rule_def): Renamed from rule_def.
+	(new): Removed.
+
 2003-11-30  Wakaba  <wakaba@suika.fam.cx>
 
 	* Base.pm (replace): Passes $self as -formatter and %opt as -option when throwing exception.
